--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,8 @@
 .serpentine {
   text-shadow: 2px 2px 0px #000, 4px 4px 0px #fff, 6px 6px 0px #000, 8px 8px 0px #fff;
 }
+
+@font-face {
+  font-family: 'Asian';
+  src: url('./fonts/AAsianHiro-vmv3L.ttf') format('truetype');
+}
