--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
+body {
   margin: 0;
   padding: 0;
   font-family: Bodoni;
   background-color: #FDFDFD;
 }
+
 
 @layer utilities {
   .text-shadow{
@@ -22,7 +23,7 @@
 }
 
 .serpentine {
-  text-shadow: 2px 2px 0px #000, 4px 4px 0px #fff, 6px 6px 0px #000, 8px 8px 0px #fff;
+  text-shadow: 2px 2px 0px #000;
 }
 
 @font-face {
